Sec11_Chap102-XXX: code optimizations